<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="clean">清除缓存</string>
    <string name="black">黑名单</string>
    <string name="safe">保险箱</string>
    <string name="about">关于</string>
    <string name="pic">图片</string>
    <string name="file">文件</string>
    <string name="set">设置密码</string>
    <string name="add">添加</string>
    <string name="confirm">确认密码</string>
    <string name="cancel">取消密码</string>
    <string name="cache_clear">清理缓存</string>
    <string name="dataSize">缓存大小</string>
    <string name="addblack">添加黑名单</string>
    <string name="deleteblack">删除黑名单</string>
    <string name="find">黑名单列表</string>
</resources>
